# neuro-swarm

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  neuro-swarm.code-workspace  pyproject.toml
deploy/docker/: Dockerfile.controller  Dockerfile.dashboard  Dockerfile.worker
deploy/k8s/: all-in-one.yaml  dashboard.yaml  ingress.yaml  timescaledb-backup.yaml  timescaledb.yaml
docs/: DEPLOYMENT.md  MODEL_DISTILLATION_ROADMAP.md
neuro_swarm/: __init__.py
neuro_swarm/core/: __init__.py  agent.py  agent_brain.py  rhythm.py  substrate.py
neuro_swarm/distillation/: __init__.py  data_generator.py  distiller.py  inference.py  quantizer.py
neuro_swarm/distillation/scripts/: __init__.py  train.py  train_mamba.py
neuro_swarm/environments/: __init__.py  simple_field.py
neuro_swarm/evolution/: __init__.py  algorithms.py  fitness.py  genome.py
neuro_swarm/observations/: __init__.py  visualize.py
neuro_swarm/philosophy/: PRINCIPLES.md
neuro_swarm/protocols/: __init__.py  attention.py  consensus.py  tension.py
neuro_swarm/services/: __init__.py  controller.py  dashboard.py  persistence.py  queue.py  worker.py
neuro_swarm/services/static/: app.js  index.html  style.css
neuro_swarm/studies/: __init__.py
neuro_swarm/studies/01_single_agent/: __init__.py  observe.py
neuro_swarm/studies/02_pair_dynamics/: __init__.py  observe.py
neuro_swarm/studies/03_triad_consensus/: __init__.py  observe.py
neuro_swarm/studies/04_small_swarm/: __init__.py  observe.py
tests/: test_agent.py  test_agent_brain.py  test_evolution.py  test_protocols.py  test_rhythm.py  test_services.py  test_simple_field.py
