[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-swarm"
version = "0.1.0"
description = "Hierarchical State Space Navigation in Neuro-Inspired Multi-Agent Swarm Systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ckdvs99", email = "ckdvs99@gmail.com"}
]
keywords = [
    "swarm-intelligence",
    "multi-agent-systems",
    "state-space-models",
    "neuro-inspired",
    "stigmergy",
    "emergence"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
ml = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
]
all = [
    "neuro-swarm[dev,viz,ml]",
]

[project.urls]
Homepage = "https://github.com/ckdvs99/neuro-swarm"
Documentation = "https://github.com/ckdvs99/neuro-swarm#readme"
Repository = "https://github.com/ckdvs99/neuro-swarm"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuro_swarm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["neuro_swarm"]
